# V-Gate

./: .dockerignore  .gitignore  AI_INFRA_PROJECT_PLAN.md  DEVLOG.md  Dockerfile  PROJECT_EXTRA_PLAN.md  README.md  config.yaml  demo.py  docker-compose.yml  main.py  requirements.txt
benchmarks/: bench_compare.py  benchmark.py
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/overlays/cpu/: deployment-patch.yaml
k8s/overlays/gpu/: deployment-patch.yaml  hpa-patch.yaml  kustomization.yaml
monitoring/: prometheus.yml
scripts/: test_concurrent.py
tests/: PHASE4_1_CONTAINERIZATION_TEST_REPORT.md  __init__.py  conftest.py  test_backends.py  test_batcher.py  test_batching.py  test_benchmark.py  test_cache.py  test_cache_log.py  test_config.py  test_observability.py  test_security.py  test_tracing.py
vgate/: batcher.py  cache.py  config.py  engine.py  logging_config.py  metrics.py  security.py  tracing.py
vgate-client/: pyproject.toml
vgate-client/tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_models.py
vgate-client/vgate_client/: __init__.py  client.py  exceptions.py  models.py
vgate/backends/: __init__.py  base.py  sglang_backend.py  vllm_backend.py
